--- a/AndradeEexamen3/Views/RegistroPage.xaml
+++ b/AndradeEexamen3/Views/RegistroPage.xaml
@@ -2,7 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AndradeEexamen3.Views.RegistroPage"
-             Title="RegistroPage">
+             xmlns:vm="clr-namespace:AndradeEexamen3.ViewModels"
+             Title="Eduardo Andrade 9 de octubre de 2006">
+
+    <ContentPage.BindingContext>
+        <vm:VehiculoViewModel />
+    </ContentPage.BindingContext>
+    
     <ScrollView>
         <VerticalStackLayout Padding="20">
             <Entry Placeholder="Marca" Text="{Binding NuevoVehiculo.Marca}" />
