--- a/AndradeEexamen3/Views/ListaVehiculosPage.xaml
+++ b/AndradeEexamen3/Views/ListaVehiculosPage.xaml
@@ -2,7 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AndradeEexamen3.Views.ListaVehiculosPage"
+             xmlns:vm="clr-namespace:AndradeEexamen3.ViewModels"
              Title="ListaVehiculosPage">
+
+    <ContentPage.BindingContext>
+        <vm:VehiculoViewModel />
+    </ContentPage.BindingContext>
+
     <CollectionView ItemsSource="{Binding Vehiculos}">
         <CollectionView.ItemTemplate>
             <DataTemplate>
